--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>樱花动漫网（山寨版）</title>
+		<title>樱花动漫（山寨版）</title>
 		
 	</head>	
 	<body style="width:100%">
